refactor: migrate from Jest to Vitest for testing framework
- Updated test scripts in package.json to use Vitest instead of Jest.
- Changed type definitions for Node.js and added Vitest dependencies.
- Refactored test files to use Vitest's API (describe, it, expect, vi).
- Created a new vitest.config.ts file for Vitest configuration.
- Adjusted package-helper.ts to support Node.js version 12 or higher.
- Updated tsconfig.json to include Vitest configuration and mock files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,11 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false
   },
-  "include": ["src/**/*", "test/**/*", "rollup.config.mjs"]
+  "include": [
+    "src/**/*",
+    "test/**/*",
+    "rollup.config.mjs",
+    "vitest.config.ts",
+    "__mocks__/**/*.ts"
+  ]
 }
