--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint:staged": "npm run license && lint-staged",
     "build": "npm run clean && npm run lint && tsc && npm run copy-files",
     "license": "license-check-and-add add -f license-config.json",
-    "test": "jest test/ --detectOpenHandles",
+    "test": "vitest run",
     "copy-files": "ncp .gitignore dist/.gitignore-target",
     "prepare": "is-ci || husky install"
   },
@@ -53,11 +53,12 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/fs-extra": "^11.0.1",
     "@types/google-apps-script": "^1.0.59",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.3",
+    "@types/node": "^22.19.1",
     "@types/prompts": "^2.4.3",
     "@types/write-file-atomic": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@vitest/coverage-v8": "^4.0.13",
+    "@vitest/ui": "^4.0.13",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-html": "^7.1.0",
@@ -65,15 +66,14 @@
     "gts": "^3.1.1",
     "husky": "^8.0.0",
     "is-ci": "^3.0.1",
-    "jest": "^29.5.0",
     "license-check-and-add": "^4.0.5",
     "ncp": "^2.0.0",
     "prettier": "^2.8.5",
     "rimraf": "^4.4.0",
     "rollup": "^3.20.0",
-    "ts-jest": "^29.0.5",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^4.0.13"
   },
   "dependencies": {
     "chalk": "^5.2.0",
