feat: pre-commitスクリプトからライセンス情報を削除し、license-config.jsonのignoreリストを整理

--- a/license-config.json
+++ b/license-config.json
@@ -1,18 +1,5 @@
 {
-  "ignore": [
-    ".claspignore",
-    ".editorconfig",
-    ".eslintignore",
-    ".gitignore",
-    ".prettierignore",
-    "*.txt",
-    ".github",
-    "CONTRIBUTING",
-    "build",
-    "dist",
-    "src/ui/.angular",
-    "*.md"
-  ],
+  "ignore": [".*", "*.txt", "CONTRIBUTING", "build", "dist", "*.md", "*.yml"],
   "license": "license-header.txt",
   "licenseFormats": {
     "js|ts|mjs": {
