feat: index.htmlのライセンス情報を追加し、license-config.jsonのignoreリストを修正

--- a/license-config.json
+++ b/license-config.json
@@ -7,7 +7,7 @@
     "dist",
     "*.md",
     "*.yml",
-    "doc/*.html"
+    "*.html"
   ],
   "license": "license-header.txt",
   "licenseFormats": {
