feat(mcp-server): initialize project with TypeScript setup and core functionalities
- Add package.json with dependencies and scripts for building and running the server.
- Implement main server logic in src/index.ts, including tool registration and request handling.
- Create templates for scaffolding features with Handlebars in src/templates.
- Develop tools for interacting with Google Drive and Gmail APIs in src/tools, including:
  - driveCreateFolder
  - driveListFiles
  - gmailSendEmail
  - gmailListLabels
- Implement syncLocalSecrets to configure GCP project and service account.
- Add setupNamedRange for managing named ranges in Google Sheets.
- Create scaffoldFeature for generating feature repositories and use cases.
- Configure TypeScript with tsconfig.json for strict type checking and module resolution.

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,7 @@
 {
-  "*.ts": ["prettier --write --list-different", "eslint --fix"]
+  "!(mcp-server)/**/*.ts": ["prettier --write --list-different", "eslint --fix"],
+  "mcp-server/src/**/*.ts": [
+    "prettier --write --list-different",
+    "bash -c 'cd mcp-server && npx eslint --fix src/**/*.ts'"
+  ]
 }
