--- a/mcp-server/.eslintrc.json
+++ b/mcp-server/.eslintrc.json
@@ -1,9 +1,8 @@
 {
   "root": true,
   "env": {
-    "browser": true,
     "node": true,
-    "es2020": true
+    "es2022": true
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -11,10 +10,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -31,12 +27,5 @@
     "@typescript-eslint/no-unsafe-argument": "off",
     "@typescript-eslint/no-empty-function": "off"
   },
-  "ignorePatterns": [
-    "node_modules/",
-    "dist/",
-    "build/",
-    "template/",
-    "template-ui/",
-    "mcp-server/"
-  ]
+  "ignorePatterns": ["node_modules/", "build/"]
 }
