feat: initialize Wyside template project with Google Apps Script and Node.js support
- Add ESLint configuration for TypeScript and Prettier integration.
- Create .claspignore and .env.example files for project setup.
- Implement README.md with setup instructions and project overview.
- Add appsscript.json for Google Apps Script configuration.
- Set up package.json with dependencies and scripts for testing and deployment.
- Configure Rollup for building TypeScript files.
- Develop UniversalSheetsClient for handling Google Sheets API interactions.
- Create core constants and types for Todo application.
- Implement TodoUseCase and UniversalTodoRepo for managing todos.
- Develop HTML interface for the Todo application.
- Set up main entry point for Google Apps Script.
- Write integration tests for TodoUseCase using Vitest.
- Create mock UI for testing purposes.
- Add setup script for loading environment variables.
- Configure TypeScript with strict settings and module resolution.
- Set up Vitest configuration for testing environment and coverage reporting.

--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
   "main": "dist/src/index.js",
   "scripts": {
     "clean": "rimraf build",
-    "lint": "npm run license && eslint --fix src/ test/",
-    "lint:staged": "npm run license && lint-staged",
+    "lint": "eslint --fix src/ test/",
+    "lint:staged": "lint-staged",
     "build": "npm run clean && npm run lint && tsc && npm run copy-files && (cd mcp-server && npm install && npm run build)",
-    "license": "license-check-and-add add -f license-config.json",
     "test": "vitest run",
     "copy-files": "ncp .gitignore dist/.gitignore-target",
     "prepare": "is-ci || husky install",
