--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "dist/.gitignore-target",
     ".claspignore",
     ".editorconfig",
-    ".eslintignore",
-    ".eslintrc.json",
+    "eslint.config.js",
     "jest.config.json",
     "LICENSE",
     "license-config.json",
@@ -59,24 +58,26 @@
     "@types/node": "^22.19.1",
     "@types/prompts": "^2.4.3",
     "@types/write-file-atomic": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@eslint/js": "^9.39.1",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-prettier": "^5.5.4",
     "gts": "^3.1.1",
     "husky": "^8.0.0",
     "is-ci": "^3.0.1",
     "license-check-and-add": "^4.0.5",
     "ncp": "^2.0.0",
-    "prettier": "^2.8.5",
+    "prettier": "^3.6.2",
     "rimraf": "^4.4.0",
     "rollup": "^3.20.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
+    "typescript-eslint": "^8.47.0",
     "vitest": "^4.0.13"
   },
   "dependencies": {
@@ -89,7 +90,7 @@
     "prompts": "^2.4.2",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-license": "^3.0.1",
-    "rollup-plugin-prettier": "^3.0.0",
+    "rollup-plugin-prettier": "^4.1.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "write-file-atomic": "^5.0.0",
     "@modelcontextprotocol/sdk": "^1.0.1"
