feat: GAS SDK使用ポリシーを追加し、環境設定とテストのためのスプレッドシートIDを更新

--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -8,7 +8,11 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["google-apps-script", "vitest/globals", "node"]
+    "types": ["google-apps-script", "vitest/globals", "node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
