--- a/template/.env.example
+++ b/template/.env.example
@@ -1,6 +1,9 @@
 # === Spreadsheet Configuration ===
 # Configure up to 5 spreadsheets by number (1-5)
 # Use SpreadsheetType enum in code: getSpreadsheetId(SpreadsheetType.MAIN)
+#
+# NOTE: For testing, APP_SPREADSHEET_ID_1_DEV is used.
+#       Make sure to set a real spreadsheet ID for integration tests.
 
 # Development Spreadsheets
 APP_SPREADSHEET_ID_1_DEV=your-main-dev-spreadsheet-id
@@ -15,10 +18,6 @@ APP_SPREADSHEET_ID_2_PROD=your-todo-prod-spreadsheet-id
 APP_SPREADSHEET_ID_3_PROD=your-calendar-prod-spreadsheet-id
 APP_SPREADSHEET_ID_4_PROD=your-contacts-prod-spreadsheet-id
 APP_SPREADSHEET_ID_5_PROD=your-notes-prod-spreadsheet-id
-
-# REQUIRED for testing: Test Spreadsheet ID
-# Used in Vitest integration tests
-TEST_SPREADSHEET_ID=your-test-spreadsheet-id
 
 # === Google Cloud Configuration ===
 GCP_PROJECT_ID=your-gcp-project-id
