feat: 環境変数から.clasp-*.jsonファイルを生成する機能を追加し、.envファイルからの読み込みをサポート

--- a/template/.env.example
+++ b/template/.env.example
@@ -24,3 +24,9 @@ GCP_PROJECT_ID=your-gcp-project-id
 
 # Path to Service Account credentials (for Node.js environment)
 GOOGLE_APPLICATION_CREDENTIALS=./secrets/service-account.json
+
+# === Google Apps Script Configuration ===
+# Script IDs for deployment (optional - will be auto-generated on first init if not provided)
+# Get these from: https://script.google.com → Your Project → Project Settings → IDs
+SCRIPT_ID_DEV=1wYundOrhB_5l8xW-sq1v2CXGxCPHM_eLRafR-Ay03Un8L-K1z6GYPCIX
+SCRIPT_ID_PROD=1wYundOrhB_5l8xW-sq1v2CXGxCPHM_eLRafR-Ay03Un8L-K1z6GYPCIX
