--- a/template/package.json
+++ b/template/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
+    "dev": "tsx src/server.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -14,9 +15,13 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
-    "googleapis": "^166.0.0"
+    "googleapis": "^166.0.0",
+    "hono": "^4.7.11"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.14.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-replace": "^6.0.3",
     "@types/google-apps-script": "^2.0.7",
     "@types/node": "^22.10.5",
@@ -25,6 +30,7 @@
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-prettier": "^4.1.2",
     "rollup-plugin-typescript2": "^0.36.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.3",
     "vitest": "^4.0.13"
   }
