--- a/template/package.json
+++ b/template/package.json
@@ -4,13 +4,19 @@
   "description": "Wyside template project",
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
+    "clean": "rimraf build dist",
+    "lint": "eslint --fix --no-error-on-unmatched-pattern src/ test/",
+    "format": "prettier --write --log-level silent .",
+    "bundle": "rollup --no-treeshake -c rollup.config.mjs",
+    "build": "npm run clean && npm run bundle && ncp appsscript.json dist/appsscript.json && ncp src/index.html dist/index.html && ncp src/email-dialog.html dist/email-dialog.html",
     "dev": "tsx src/server.ts",
-    "test": "vitest run",
+    "test": "npm run lint && npx tsc --noEmit && vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "deploy": "npm run build && clasp push"
+    "deploy": "npm run build && ncp .clasp-dev.json .clasp.json && clasp push -f",
+    "deploy:stg": "npm run test && npm run build && ncp .clasp-stg.json .clasp.json && clasp push",
+    "deploy:prod": "npm run test && npm run build && ncp .clasp-prod.json .clasp.json && clasp push"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
@@ -26,6 +32,8 @@
     "@types/google-apps-script": "^2.0.7",
     "@types/node": "^22.10.5",
     "@vitest/coverage-v8": "^4.0.13",
+    "ncp": "^2.0.0",
+    "rimraf": "^6.1.2",
     "rollup": "^4.53.3",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-prettier": "^4.1.2",
