feat: ESLint設定にファイルオーバーライドを追加し、特定のファイルタイプに対するルールを明確化

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,5 +38,20 @@
     "template/",
     "template-ui/",
     "mcp-server/"
+  ],
+  "overrides": [
+    {
+      "files": ["*.mjs", "*.cjs", "*.js"],
+      "parserOptions": {
+        "project": null
+      },
+      "extends": [
+        "eslint:recommended",
+        "prettier"
+      ],
+      "rules": {
+        "prettier/prettier": "error"
+      }
+    }
   ]
 }
