feat: テスト機能の操作を更新し、getAllおよびgetByIdを追加

--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -10,7 +10,7 @@ TEST_SPREADSHEET_ID=your-spreadsheet-id
 
 # Test scaffold_feature
 TEST_FEATURE_NAME=Todo
-TEST_FEATURE_OPERATIONS=create,read,update,delete
+TEST_FEATURE_OPERATIONS=create,getAll,getById,update,delete
 
 # Google Cloud credentials path (optional)
 GOOGLE_APPLICATION_CREDENTIALS=./secrets/service-account.json
