chore: update package.json with linting and formatting scripts; add ESLint and Prettier dependencies
fix: modify test-tool script to allow JSON input for operations and schema

refactor: streamline error message formatting in index.ts

style: clean up universal-repo.ts.hbs template for better readability

test: enhance CLAUDE.md and operation-catalog.factory.ts for improved preset creation

style: format sheets-tools.factory.ts for consistency

test: refine sync-secrets-from-gcp-to-local tests for better readability and structure

build: adjust vitest.config.ts for alias resolution

chore: remove unnecessary newline in template/package.json

style: simplify index.html structure and improve readability

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,8 @@
 {
-  "!(mcp-server)/**/*.ts": ["prettier --write --list-different", "eslint --fix"],
+  "!(mcp-server)/**/*.ts": [
+    "prettier --write --list-different",
+    "eslint --fix"
+  ],
   "mcp-server/src/**/*.ts": [
     "prettier --write --list-different",
     "bash -c 'cd mcp-server && npx eslint --fix src/**/*.ts'"
