--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -45,10 +42,7 @@
       "parserOptions": {
         "project": null
       },
-      "extends": [
-        "eslint:recommended",
-        "prettier"
-      ],
+      "extends": ["eslint:recommended", "prettier"],
       "rules": {
         "prettier/prettier": "error"
       }
