--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -7,6 +7,10 @@
     "build": "tsc",
     "start": "node build/index.js",
     "format": "prettier --write --log-level silent .",
+    "format:check": "prettier --check . && npm run lint:fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "check": "npm run format:check && npm run lint",
     "dev": "tsc --watch",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -25,10 +29,16 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "@vitest/ui": "^4.0.13",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "factory.ts": "^1.4.2",
+    "prettier": "^3.7.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.0",
     "vitest": "^4.0.13"
   }
 }
